project1/style.css
/* ... */
::-webkit-scrollbar {
    height: 3px;
    width:7px;
}  

  /* Handle */
::-webkit-scrollbar-thumb {
    background: #64B3E8; 
    border-radius: 2px;
  }
  

@media screen and (max-width:412px){
    .navigation{
        margin: 20px 15px 0px;
    }
    .navigation__list{
        flex: 0.9;
    }
    .navigation__listitem>h3{
        font-size: 9px;
        margin: 0px;
        text-align: center;
        height: 25px;
        line-height: 12px;
    }
    .navigation__body{
        margin: 5px 15px 0px;
    }
    .body.item1>h2, .body.item2>h2{
        font-size: 1rem;
    }
    .body.item1 >button, .body.item2 >button, .featuresearch>button {
        font-size: 15px;
    }
    .body.item1>p, .body.item2>p, .body.item3>p{
        font-size: 10px;
    }
    .featuresearch>input{
        width: 225px;
        font-size: 7px;
    }
    .body.item4>h2 {
        margin: 0 0 10px;
        font-size: 10px;
    }
    .popularlistings>img, .searchlistings>img {
        width: 47%;
    }
    .filters{
        flex-wrap: wrap;
        justify-content: start;
    }
    .filter{
        margin: 5px;
    }
    .trademark{
        margin: 15px 25px;
    }
    .trademark>h2{
        font-size: 10px;
    }
    .trademark>img{
        width:75px;
        height:12px;
    }
    .select__files{
        margin: 40px 4%;
        padding: 58px 0px;
    }
    .box{
        height: 50px;
        width: 50px;
    }
    .box>img{
        width:48px;
    }
    .select__filestoprighttopright {
        flex: 0.3;
    }
    .search{
        margin: 5px 20px 0px;
    }
    .search>h2{
        font-size: 10px;
    }
    .searchresults, .savedresults {
        width: 100px;
        margin: 0px;
        font-size: 11px;
        padding: 9px;
    }
    .searchresults.search-active::after, .savedresults.search-active::after {
        width: 100px;
        margin: 20px -87px;
    }
    .savedresults.search-active::after {
        margin: 20px -85px;
    }
    .searchresultoptions {
        flex-direction: column;
        margin-left: 3px;
    }
    .closesearchresults{
        font-size: 10px;
    }
    .searchresultsoptions__leftfiltersoptions>button, .sro_lfoleft>button, .sro_lforight>button, .searchresultsoptions__leftbuttons>button {
        font-size: 8px;
        padding: 5px;
        margin: 1px;
    }
    .sro_lfoleft>button{
        font-size: 7px;
    }
    .searchresultsoptions__rightcardimg, .searchresultsoptions__rightcardsearch {
        margin: 8px;
        height: 53px;
        width: 53px;
    }
    .searchresultsoptions__left{
        padding: 5px 5px 20px 5px;
    }
    .togglesearchbefore{
        transform: rotate(90deg);
        margin-left: 141px;
        margin-top: -18px;
    }
    .searchresultsoptions__rightcard>h4 {
        font-size: 7px;
    }
    .searchresultsoptions__rightcardfullsearch {
        width: 231px;
    }
    .fullsearchtop{
        padding: 5px 2px;
    }
    .fullsearchtop::after{
        height: 30px;
    width: 4px;
    margin-top: 8px;
    margin-right: -3px;
    }
    .fullsearchtop>img{
        height: 50px;
        margin: 5px;
    }
    .fullsearchtopinfoheader>h1 {
        font-size: 9px;
    }
    .fullsearchtopinfoheader>p {
        font-size: 7px;
    }
    .fullsearchtopinfo>h3, .fullsearchtopinfo>p {
        margin: 2px 0px;
        font-size: 7px;
    }
    .fullsearchbottom>input {
        margin: 2px 8px;
        font-size: 8px;
    }
    .fullsearchbottom>h4 {
        font-size: 7px;
        padding: 4px 72px 4px 5px;
    }
    .fullsearchbottom>img{
        width: 8px;
    }
    .expansion{
        top: auto;
        /* margin-top: 107px; */
        right: auto;
        width: 50%;
    }
    .imagesection{
        height: 107px;
    }
    .imagesectiontop > img {
        width: 10px;
    }
    .imagesectionbottom{
        /* justify-content: flex-end; */
        margin-bottom: 1px;
    }
    .imagesectionbottom>span{
        padding: 0px;
        font-size: 11px;
    }
    .imagesectionbottom1{
        margin: 0px 5px 0px 5px;
    }
    .estatedetails{
        margin: 5px 0px;
    padding-bottom: 4px;
    }
    .estatedetail{
        flex: 0.3;
        align-items: center;
    }
    .estatedetail>img{
        width: 20px;
    }
    .estatedetail>h3{
        margin: 0px;
        font-size: 7px;
    }
    .estatelocation, .estatetags {
        margin: 0px 15px;
    padding-bottom: 10px;
    }
    .estatelocation>h1{
        font-size: 9px;
    }
    .estatelocation>p{
        font-size: 7px;
    }
    .estatetags>h2{
        margin: 10px 0px 6px;
    font-size: 8px;
    }
    .estatetags>p{
        font-size: 7px;
    }
    .estateoptions>h1{
        font-size: 10px;
        padding: 8px;
    }
    .estateoptions>h3{
        font-size: 8px;
        padding: 10px;
    }
    .estateoptions>img {
        padding: 2px 10px;
        width: 10px;
    }
    .expansion>h1{
        font-size: 10px;
        padding: 10px 0px;
    }
    .imagexpand{
        padding: 15px;
    }
    .imagexpandtop>img , .imagexpandbottom1>img, .imagexpandbottom3>img{
        width: 20px;
    }
    .imagexpandbottom2>img{
        width:100%;
    }
    .imagexpand>p{
        font-size: 8px;
    }
    .opensearchresults>button{
        font-size: 12px;
    }
    .savedresultoptions{
        width:100%
    }
    .savedresultoptions__top{
        width: 100%;
        overflow-x: scroll;
        align-items: unset;
    }
    .savedresultoptions__toptable{
        width: fit-content;
        padding-bottom: 5px;
    }

    /* pAGINATION RESPONSIVE */
    .pagination{
        width:90%;
    }
    .pagination>button{
        padding: 5px;
    }
    .savedresultoptions__toptable>ul{
        padding-left: 1px;
    }
    .signupdialogbox, .signindialogbox, .forgetpassword {
        top: 18%;
        left: 3%;
        width: 83%;
    }
    .inputfield>input{
        width: 100%;
    }
    .signupdialogbox> form, .signindialogbox>form, .forgetpassword>form {
        width: auto;
    }

}

